--- a/network_analysis_up_markdown.Rmd
+++ b/network_analysis_up_markdown.Rmd
@@ -13,6 +13,32 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r, echo = F, warning = F, message = F, results = 'asis'}
+
+#####################################
+###SET FILE LOCATIONS TO RUN CODE####
+#####################################
+
+# ego igraph file
+ego_igraph_f <- "/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis/data/ego_igraph_up.rda"
+
+# alter igraph file
+alter_igraph_f <- "/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis/data/alter_igraph_up.rda"
+
+# ego data file
+ego_data_f <- "/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis/data/SNA study_EGO_clean_Uttar Pradesh_08112022.xlsx"
+
+# alter data file
+alter_data_f <- "/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis/data/SNA study_ALTER_clean_Uttar Pradesh_08112022.xlsx"
+
+# ego pc data file
+ego_pc_f <- "data/ego_pc_complete_up_08112022.xlsx"
+
+# duplicate id file
+dup_id_f <- 'data/duplicate_ids_up_07112022.xlsx'
+
+```
+
 # 1. Centrality and Density Measures
 ## A) Ego Metrics
 
@@ -33,7 +59,7 @@ library(kableExtra)
 #######################################
 
 # load ego igraph objects
-load("/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis/data/ego_igraph_up.rda")
+load(ego_igraph_f)
 
 # measures based on ego
 ego_ego_met <- gr_list_ego %>%
@@ -322,7 +348,7 @@ ego_alt_met %>%
 ########################################
 
 # load alter igraph objects
-load("/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis/data/alter_igraph_up.rda")
+load(alter_igraph_f)
 
 # create table of unique blocks showing district as well
 # write.csv(alter_df %>% select(district_name, block_name) %>% distinct(block_name, .keep_all = T), 
@@ -1028,8 +1054,7 @@ ggraph(gr_list_ego[[147]], 'dh') +
   theme(legend.position="none") +
   ggtitle('Ego-Alter Network (Density = 0.67)')
 # ggsave(filename = 'results_up/figures/ego_net_147.png')
-# clear workspace
-rm(list=ls())
+
 ```
 
 ```{r, echo = F, warning = F, message = F, results = 'asis'}
@@ -1056,12 +1081,9 @@ library(readstata13)
 ### LOAD EGO AND ALTER DATA AND CLEAN ###
 #########################################
 
-# set wd
-setwd('/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis')
-
 # load ego and alter cleaned and completre data
-ego <- read_excel(path = "data/SNA study_EGO_clean_Uttar Pradesh_08112022.xlsx")
-alter <-read_excel(path = "data/SNA study_ALTER_clean_Uttar Pradesh_08112022.xlsx")
+ego <- read_excel(path = ego_data_f)
+alter <-read_excel(path = alter_data_f)
 
 # # load dta stata file to get PC data for egos
 # ego_pc <- read.dta13(file = 'data/PC_EGO_data_Merge_Uttar Pradesh.dta', convert.factors = F)
@@ -1070,10 +1092,10 @@ alter <-read_excel(path = "data/SNA study_ALTER_clean_Uttar Pradesh_08112022.xls
 # write_xlsx(ego_pc, "data/ego_pc_complete_up_07122022.xlsx")
 
 # load pc data for egos
-ego_pc <- read_excel(path = 'data/ego_pc_complete_up_08112022.xlsx')
+ego_pc <- read_excel(path = ego_pc_f)
 
 # load list of duplicate ids
-dup_id <- read_excel(path = 'data/duplicate_ids_up_07112022.xlsx')
+dup_id <- read_excel(path = dup_id_f)
 
 # clean column names only keep part after last "."
 ego_names <- sapply(colnames(ego), FUN = function(x){
@@ -4316,9 +4338,6 @@ hetero_alt %>%
 
 ```{r, echo = F, warning = F, message = F, results = 'asis'}
 
-# clear workspace
-rm(list=ls())
-
 # this code loads csv data of ego and alter interviews
 # and calculates tie intensity and strength
 
@@ -4337,12 +4356,9 @@ library(readstata13)
 ### LOAD EGO AND ALTER DATA AND CLEAN ###
 #########################################
 
-# set wd
-setwd('/Users/bermane/Team Braintree Dropbox/Ethan Berman/R Projects/icrw-egocentric-analysis')
-
 # load ego and alter cleaned and completre data
-ego <- read_excel(path = "data/SNA study_EGO_clean_Uttar Pradesh_08112022.xlsx")
-alter <-read_excel(path = "data/SNA study_ALTER_clean_Uttar Pradesh_08112022.xlsx")
+ego <- read_excel(path = ego_data_f)
+alter <-read_excel(path = alter_data_f)
 
 # # load dta stata file to get PC data for egos
 # ego_pc <- read.dta13(file = 'data/PC_EGO_data_Merge_Uttar Pradesh.dta', convert.factors = F)
@@ -4351,10 +4367,10 @@ alter <-read_excel(path = "data/SNA study_ALTER_clean_Uttar Pradesh_08112022.xls
 # write_xlsx(ego_pc, "data/ego_pc_complete_up_07122022.xlsx")
 
 # load pc data for egos
-ego_pc <- read_excel(path = 'data/ego_pc_complete_up_08112022.xlsx')
+ego_pc <- read_excel(path = ego_pc_f)
 
 # load list of duplicate ids
-dup_id <- read_excel(path = 'data/duplicate_ids_up_07112022.xlsx')
+dup_id <- read_excel(path = dup_id_f)
 
 # clean column names only keep part after last "."
 ego_names <- sapply(colnames(ego), FUN = function(x){
